de.math4u2.application/src/main/java/math4u2/parser/formulaold/fsParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. fsParser.java */
package math4u2.parser.formulaold;

import java.util.*;
import math4u2.parser.formulaold.parserNodes.*;
import math4u2.controller.*;

public class fsParser/*@bgen(jjtree)*/implements fsParserTreeConstants, fsParserConstants {/*@bgen(jjtree)*/
  protected JJTfsParserState jjtree = new JJTfsParserState();private Map modifierMap= new HashMap();
        private Broker broker;
        public static void main(String args[]) {}

        public void setModifierMap(Map modifierMap) {
        this.modifierMap= modifierMap;
    }

    public Map getModifierMap() {
        return modifierMap;
    }

    public Node parse(Broker broker) throws ParseException{
        this.broker=broker;
        return Start();
    }

  final public ASTStart Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/*
 * Ein Ausdruck kann sein
 * - Definition wie f(x):=
 * - Relation wie x+3 = 2*y - 4
 */
  final public void Expression() throws ParseException {
    if (jj_2_1(2147483647)) {
      Definition();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDITIONSYMBOL:
      case ROOT:
      case SQRT:
      case SUM:
      case INT:
      case PROD:
      case DERIVE:
      case PDERIVE:
      case EXIST:
      case FORALL:
      case MATHFUNCTION:
      case LOG:
      case FAC:
      case EXPO:
      case VECMATH:
      case UNDEFVECTOR:
      case UNDEFMATRIX:
      case FLOAT_LITERAL:
      case INTEGER_LITERAL:
      case INFIN:
      case EULER:
      case PI:
      case SYMBOL:
      case NABLA:
      case IDENTIFIER:
      case 52:
      case 59:
      case 60:
      case 61:
      case 62:
        RelationExpression();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/*
 * eine Definition ist gekennzeichnet durch ein ":="
 */
  final public void Definition() throws ParseException {
          ASTNormalExpression jjtn001 = new ASTNormalExpression(JJTNORMALEXPRESSION);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
    try {
      FunctionExpression();
      jj_consume_token(49);
      RelationExpression();
                  jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
                  jjtc001 = false;
                        jjtn001.setName(":=");
    } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
    } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
          }
    }
  }

/*
 * eine Relation besteht aus:
 * - min. zwei Ausdrücken mit Operatoren deren Bindungsstärke nicht höher als die der Addition
 * - zwischen zwei Ausdrücken steht ein Relationszeichen: <, >, =, ...
 */
  final public void RelationExpression() throws ParseException {
        Token symbol;
    AdditiveExpression();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RELATIONSYMBOL:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      symbol = jj_consume_token(RELATIONSYMBOL);
      AdditiveExpression();
                          ASTNormalExpression jjtn001 = new ASTNormalExpression(JJTNORMALEXPRESSION);
                          boolean jjtc001 = true;
                          jjtree.openNodeScope(jjtn001);
      try {
                                  jjtree.closeNodeScope(jjtn001,  2);
                                  jjtc001 = false;
                                        jjtn001.setName(symbol.image);
      } finally {
                          if (jjtc001) {
                            jjtree.closeNodeScope(jjtn001,  2);
                          }
      }
    }
  }

/*
 * eine Addition besteht aus:
 * - min. zwei Ausdrücken mit Operatoren deren Bindungsstärke nicht höher als die der Multiplikation
 * - dem additionszeichen: + oder - oder +- zwischen jeweils zwei Ausdrücken
 * - der erste term kann ein vorzeichen haben
 */
  final public void AdditiveExpression() throws ParseException {
        Token symbol;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADDITIONSYMBOL:
      PraefixExpression();
      break;
    case ROOT:
    case SQRT:
    case SUM:
    case INT:
    case PROD:
    case DERIVE:
    case PDERIVE:
    case EXIST:
    case FORALL:
    case MATHFUNCTION:
    case LOG:
    case FAC:
    case EXPO:
    case VECMATH:
    case UNDEFVECTOR:
    case UNDEFMATRIX:
    case FLOAT_LITERAL:
    case INTEGER_LITERAL:
    case INFIN:
    case EULER:
    case PI:
    case SYMBOL:
    case NABLA:
    case IDENTIFIER:
    case 52:
    case 59:
    case 60:
    case 61:
    case 62:
      MultiplicativeExpression();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDITIONSYMBOL:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      symbol = jj_consume_token(ADDITIONSYMBOL);
      MultiplicativeExpression();
                  ASTNormalExpression jjtn001 = new ASTNormalExpression(JJTNORMALEXPRESSION);
                  boolean jjtc001 = true;
                  jjtree.openNodeScope(jjtn001);
      try {
                          jjtree.closeNodeScope(jjtn001,  2);
                          jjtc001 = false;
                                jjtn001.setName(symbol.image);
      } finally {
                  if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001,  2);
                  }
      }
    }
  }

/*
 * Eine PraefixExpression hat zwei kinder
 * - das Praefix
 * - einem mult-Ausdruck 
 */
  final public void PraefixExpression() throws ParseException {
                            /*@bgen(jjtree) PraefixExpression */
  ASTPraefixExpression jjtn000 = new ASTPraefixExpression(JJTPRAEFIXEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Praefix();
      MultiplicativeExpression();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/*
 * ein PraefixOperator wie:  "-" kann auch ein "+" sein. 
 */
  final public void Praefix() throws ParseException {
                  /*@bgen(jjtree) Praefix */
        ASTPraefix jjtn000 = new ASTPraefix(JJTPRAEFIX);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token symbol;
    try {
      symbol = jj_consume_token(ADDITIONSYMBOL);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.setName(symbol.image);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/*
 * eine Multiplikation besteht aus:
 * - min zwei Ausdrücken mit Operatoren deren Bindungsstärke nicht höher als Division
 * - dem multiplikationszeichen zwischen jeweils 2 Operanden
 */
  final public void MultiplicativeExpression() throws ParseException {
        Token symbol;
    DivisiveExpression();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICATIONSYMBOL:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      symbol = jj_consume_token(MULTIPLICATIONSYMBOL);
      DivisiveExpression();
                  ASTNormalExpression jjtn001 = new ASTNormalExpression(JJTNORMALEXPRESSION);
                  boolean jjtc001 = true;
                  jjtree.openNodeScope(jjtn001);
      try {
                          jjtree.closeNodeScope(jjtn001,  2);
                          jjtc001 = false;
                                jjtn001.setName(symbol.image);
      } finally {
                  if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001,  2);
                  }
      }
    }
  }

/*
 * eine Division wird extra behandelt 
 * um einen Ausdruck wie 3*4/5 wie 3*(4/5) darzustellen 
 * die 3 steht so vor dem bruch
 */
  final public void DivisiveExpression() throws ParseException {
    ExponentialExpression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      jj_consume_token(DIVIDE);
                           ASTDiv jjtn001 = new ASTDiv(JJTDIV);
                           boolean jjtc001 = true;
                           jjtree.openNodeScope(jjtn001);
      try {
        ExponentialExpression();
      } catch (Throwable jjte001) {
                           if (jjtc001) {
                             jjtree.clearNodeScope(jjtn001);
                             jjtc001 = false;
                           } else {
                             jjtree.popNode();
                           }
                           if (jjte001 instanceof RuntimeException) {
                             {if (true) throw (RuntimeException)jjte001;}
                           }
                           if (jjte001 instanceof ParseException) {
                             {if (true) throw (ParseException)jjte001;}
                           }
                           {if (true) throw (Error)jjte001;}
      } finally {
                           if (jjtc001) {
                             jjtree.closeNodeScope(jjtn001,  2);
                           }
      }
    }
  }

/*
 * Ein exponentieller Ausdruck ist gekennzeichnet durch:
 * - min zwei Ausdrücken ohne Präfix- und Infixoperatoren
 * - ein Dach "^" zwischen jeweils zwei Ausdrücken
 */
  final public void ExponentialExpression() throws ParseException {
    PostfixExpression();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      jj_consume_token(50);
                      ASTExpo jjtn001 = new ASTExpo(JJTEXPO);
                      boolean jjtc001 = true;
                      jjtree.openNodeScope(jjtn001);
      try {
        PostfixExpression();
      } catch (Throwable jjte001) {
                      if (jjtc001) {
                        jjtree.clearNodeScope(jjtn001);
                        jjtc001 = false;
                      } else {
                        jjtree.popNode();
                      }
                      if (jjte001 instanceof RuntimeException) {
                        {if (true) throw (RuntimeException)jjte001;}
                      }
                      if (jjte001 instanceof ParseException) {
                        {if (true) throw (ParseException)jjte001;}
                      }
                      {if (true) throw (Error)jjte001;}
      } finally {
                      if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001,  2);
                      }
      }
    }
  }
